# football-fan-ai-agent

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  GOOGLE_CALENDAR_AUTH.md  GOOGLE_CALENDAR_SETUP.md  Justfile  Makefile  README.md  SCHEDULER.md  docker-compose.yaml  docker-compose.yml  docker-run.sh  env.template  main.py  pyproject.toml  scheduler.py  test-docker.sh
src/: api.py  config.py  main.py
src/agents/: deepseek_agent.py  football_data_agent.py  gemini_agent.py
src/controllers/: matches_controller.py
src/cron/: jobs.py
src/infrastructure/: custom_logger.py  file_system_database.py  google_calendar.py  settings.py
src/models/: matches_request.py  matches_response.py
src/scrappers/espn/: espn_config.py  espn_scrapper.py  espn_scrapper_api.py  espn_scrapper_html.py
