[project]
name = "football-fan-ai-agent"
version = "0.1.0"
description = "AI agent for searching football games using DeepSeek API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "deepseek>=1.0.0",
    "flake8>=7.3.0",
    "google>=3.0.0",
    "google-genai>=1.30.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "isort>=6.0.1",
    "nltk>=3.9.1",
    "openai>=1.99.9",
    "pylint>=3.3.8",
    "python-crontab>=3.3.0",
    "python-dotenv>=0.9.9",
    "requests>=2.31.0",
    "ruff>=0.12.9",
    "schedule>=1.2.2",
    "typer>=0.16.0",
    "google-auth-httplib2>=0.2.0",
    "beautifulsoup4>=4.13.4",
    "selenium>=4.35.0",
    "lxml>=6.0.1",
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pg>=0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "fastapi-cache2[redis]>=0.2.2",
]
